--- a/_posts/2023-10-28-aws.md
+++ b/_posts/2023-10-28-aws.md
@@ -11,3 +11,14 @@ aws ec2 describe-instances| jq '.Reservations[].Instances[].InstanceId'
 aws ec2 stop-instances --instance-ids i-04028ee8c6a252593 i-03bcb29f0692478ef i-0863b1ea4d5c340f3 i-091188155116050b6 i-09275f16f727fdbb9 i-0026511503ac7d3b0 i-0761201c0e8acbf11
 ```
 
+**stop aws instances mit status**
+
+```bash
+aws ec2 stop-instances --instance-ids i-04028ee8c6a252593 i-03bcb29f0692478ef i-0863b1ea4d5c340f3 i-091188155116050b6 i-09275f16f727fdbb9 i-0026511503ac7d3b0 i-0761201c0e8acbf11| jq '.StoppingInstances[].CurrentState.Name'
+```
+
+**get identity ID**
+
+```bash
+aws sts get-caller-identity 
+```
